example/SyntaxError/feature_line_error.pione
Rule ABC
  input '*.a'
  output '*.b'
  feature GGGGG
Action
cat {$I[1]} > {$O[1]}
End
